--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" type="image/png" href="https://i.imgur.com/L0VzO50.png">
+    <link rel="shortcut icon" type="image/png" href="https://i.imgur.com/DV5Gvh3.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans|Oswald|Roboto+Slab">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" />
